# fitparse-csv

./: .gitignore  README.md  pyproject.toml  update_profile.py  update_profile.sh
fitparse_csv/: __main__.py  cli.py  converter.py  fitparse_csv.py  runner.py
profile/21.141.00/: profile.py
profile/21.158.00/: profile.py
profile/21.171.00/: profile.py
