[tool.poetry]
name = "fitparse-csv"
version = "0.1.0"
description = "fitparse csv converter"
authors = ["PuzzleMoon <32855965+puzzlemoondev@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.0"
fitparse = "^1.2.0"
openpyxl = "^3.1.3"

[tool.poetry.scripts]
fitparse-csv = "fitparse_csv.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
