[project]
name = "fitparse-csv"
version = "0.1.0"
description = "fitparse csv converter"
authors = [
    { name = "PuzzleMoon", email = "32855965+puzzlemoondev@users.noreply.github.com" },
]
requires-python = ">=3.6.0,<4"
readme = "README.md"
license = "MIT"
dependencies = ["fitparse>=1.2.0,<2", "openpyxl>=3.1.3,<4"]

[dependency-groups]
dev = ["ruff>=0.0.17", "xlrd==1.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "RUF022"]
